--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
 
-    <title>Bibiana Mora Gómez UX/UI Designer</title>
+    <title>Bibi Mora Gómez UX/UI Designer</title>
 
     <link rel="stylesheet" href="stylesheets/style.css">
 
@@ -38,10 +38,10 @@
           <h2>Hola, hola</h2>
 
           <p>
-            soy Bibi MoraGo, soy psicóloga, con un máster en marketing deportivo y un bootcamp en diseño UX/UI.
+            soy Bibi Mora Gómez, soy psicóloga, con un máster en marketing deportivo y un bootcamp en diseño UX/UI.
           </p>
 
-          <p>Me apasiona poder desarrollar y llevar a cabo ideas que sirvan para mejorar nuestro mundo, utilizando la creatividad como medio para resolver problemas apoyada en la investigación y el diseño.</p>
+          <p>Me apasiona poder desarrollar y llevar a cabo ideas que sirvan para mejorar nuestro mundo, utilizando la creatividad como medio para resolver problemas apoyada en la investigación y el diseño.</p>
 
             <a href="aboutme.html" class="button">Conoce más</a>
 
