--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
 
-    <title>Bibiana Mora Gómez UX/UI Designer</title>
+    <title>Bibi Mora Gómez UX/UI Designer</title>
 
     <link rel="stylesheet" href="stylesheets/contactStyle.css">
 
