--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
 
-    <title>Bibiana Mora UX/UI Designer</title>
+    <title>Bibi Mora UX/UI Designer</title>
 
     <link rel="stylesheet" href="stylesheets/aboutmeStyle.css">
 
@@ -63,7 +63,7 @@
               <h4>UX/UI designer</h4>
               <h5>IronHack</h5>
               <p>
-                Sprint, investigación UX, SCRUM, diseño de producto, arquitectura de información, sistemas de diseño, HTML, CSS.
+                Sprint, investigación UX, SCRUM, diseño de producto, arquitectura de información, sistemas de diseño, HTML, CSS.
               </p>
               </div>
             </div>
@@ -85,7 +85,7 @@
               <div>
               <h4>Psychologist</h4>
               <h5>Pontificia Universidad Javeriana</h5>
-              <p>Desarrollo empresarial, recursos humanos, selección de personal, investigación cualitativa y cuantitativa.</p>
+              <p>Desarrollo empresarial, recursos humanos, selección de personal, investigación cualitativa y cuantitativa.</p>
               </div>
             </div>
 
