--- a/workExperience.html
+++ b/workExperience.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
 
-    <title>Bibiana MoraGo</title>
+    <title>Bibi Mora Gómez UX/UI Design</title>
 
     <link rel="stylesheet" href="stylesheets/workExperienceStyle.css">
 
@@ -83,7 +83,7 @@
               </p>
 
               <p>
-                • Diseño web orientado a la atracción y conversión de clientes.
+                • Diseño web orientado a la atracción y conversión de clientes.
               </p>
 
               <p>
@@ -104,11 +104,11 @@
               <p>Logros:</p>
 
               <p>
-                • Implementación de herramientas de social listening para mejorar las propuestas y análisis de las campañas de marketing realizadas por la agencia.
+                • Implementación de herramientas de social listening para mejorar las propuestas y análisis de las campañas de marketing realizadas por la agencia.
               </p>
 
               <p>
-                • Seguimiento e informes de campañas digitales.
+                • Seguimiento e informes de campañas digitales.
               </p>
 
               <p>
