--- a/workExperience.html
+++ b/workExperience.html
@@ -46,7 +46,7 @@
                 <p class="product">Proyectos UX/UI</p>
                 <h3>PainAway</h3>
               </div>
-              <a href="https://www.behance.net/bibianamore4b5"> <img class="projectimge" src="img/fisio.jpg" alt="PainAway Project"> </a>
+              <a href="https://www.behance.net/gallery/78388275/PainAway"> <img class="projectimge" src="img/fisio.jpg" alt="PainAway Project"> </a>
             </div>
 
             <div>
