--- a/workExperience.html
+++ b/workExperience.html
@@ -54,7 +54,7 @@
                 <p class="product">Proyectos UX/UI</p>
                 <h3>CoachPass</h3>
               </div>
-              <a href="https://www.behance.net/bibianamore4b5"> <img class="projectimge" src="img/coach.jpg" alt="Coachme"> </a>
+              <a href="https://www.behance.net/bibianamorago/"> <img class="projectimge" src="img/coach.jpg" alt="Coachme"> </a>
             </div>
 
             <div class="bloombox">
@@ -62,7 +62,7 @@
               <p class="product">Design Sprint</p>
               <h3>BloomBox</h3>
               </div>
-              <a href="https://www.behance.net/bibianamore4b5"> <img class="projectimge" src="img/bloombox.jpg" alt="bloombox"> </a>
+              <a href="https://www.behance.net/bibianamorago/"> <img class="projectimge" src="img/bloombox.jpg" alt="bloombox"> </a>
             </div>
 
           </div>
