--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <p class="product">Proyectos UX/UI</p>
               <h3>CoachPass</h3>
             </div>
-            <a href="https://www.behance.net/bibianamore4b5"> <img class="projectimge" src="img/coach.jpg" alt="Coachme"> </a>
+            <a href="https://www.behance.net/bibianamorago"> <img class="projectimge" src="img/coach.jpg" alt="Coachme"> </a>
           </div>
 
         </div>
@@ -134,7 +134,7 @@
 
             <a href="https://medium.com/@bibiana.morago" class="footer"> <img id="Medium" src="http://cdn.onlinewebfonts.com/svg/img_424230.png" alt="Logo Medium"> </a>
 
-            <a href="https://www.behance.net/bibianamore4b5" class="footer"> <img id="behance" src="https://image.flaticon.com/icons/png/512/49/49403.png" alt="Logo behance"> </a>
+            <a href="https://www.behance.net/bibianamorago" class="footer"> <img id="behance" src="https://image.flaticon.com/icons/png/512/49/49403.png" alt="Logo behance"> </a>
           </div>
 
         </footer>
