--- a/aboutme.html
+++ b/aboutme.html
@@ -107,6 +107,6 @@
 
               <a href="https://medium.com/@bibiana.morago" class="footer"> <img id="Medium" src="http://cdn.onlinewebfonts.com/svg/img_424230.png" alt="Logo Medium"> </a>
 
-              <a href="https://www.behance.net/bibianamore4b5" class="footer"> <img id="behance" src="https://image.flaticon.com/icons/png/512/49/49403.png" alt="Logo behance"> </a>
+              <a href="https://www.behance.net/bibianamorago" class="footer"> <img id="behance" src="https://image.flaticon.com/icons/png/512/49/49403.png" alt="Logo behance"> </a>
             </div>
     </body>
