--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <p class="product">Proyectos UX/UI</p>
               <h3>CoachPass</h3>
             </div>
-            <a href="https://www.behance.net/bibianamorago"> <img class="projectimge" src="img/coach.jpg" alt="Coachme"> </a>
+            <a href="https://www.behance.net/gallery/78542403/CoachPass"> <img class="projectimge" src="img/coach.jpg" alt="Coachme"> </a>
           </div>
 
         </div>
