--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,7 @@
           <h2>¿Quién soy?</h2>
 
           <div class="companny">
-            <a href="https://www.linkedin.com/in/bibianamorago/"> <img id="yo" src="https://media.licdn.com/dms/image/C4D03AQGen4nG6QvbEA/profile-displayphoto-shrink_200_200/0?e=1554336000&v=beta&t=Gl7nm9gyT67JBVoiAH7VgEFKYLcycnk8KHg8ufKRh1Y" alt="Foto Bibiana Mora"> </a>
+            <a href="https://www.linkedin.com/in/bibianamorago/"> <img id="yo" src="img/Bibi Morago.jpeg" alt="Foto Bibiana Mora"> </a>
             <div>
               <p>I am Bibiana Mora Gómez, a passionate psychologist specialized in sports marketing and user experience designer.
               </p>
